--- a/portpolio/style.css
+++ b/portpolio/style.css
@@ -1,54 +1,47 @@
 :root {
-  --bg-color: rgba(249, 219, 217);
-  --mainFontColor: rgba(252, 196, 190);
-  --pointFontColor: rgba(229, 157, 152);
+  --all-bg-color: #f0efeb;
+  --point-color: #ccd5ae;
 }
 
-html {
-  scroll-behavior: smooth;
+* {
+  box-sizing: border-box;
+  font-family: SCDream3;
+}
+
+@font-face {
+  font-family: "SCDream3";
+  src: url("../font/SCDream3.otf") format("truetype");
+  font-style: normal;
+  font-weight: normal;
 }
 
 body {
   margin: 0px;
-  overflow-y: auto;
-  overflow-x: hidden;
-  display: flex;
-  flex-direction: column;
+  background-color: var(--all-bg-color);
 }
 
 a {
   text-decoration: none; /*텍스트의 밑줄 제거*/
-  color: #fff;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5 {
-  color: #fff;
-  background-color: transparent;
-}
-
-span {
-  color: #fff;
-  background-color: transparent;
+  color: black;
 }
 
 .header {
-  height: 92px;
+  height: 80px;
+  background-color: var(--all-bg-color);
 }
 
 .navbar {
-  display: flex; /*flexbox로 적용할 수 있는 속성*/
-  justify-content: space-around; /*네비바 내의 div들을 같은 간격으로 조정*/
-  align-items: center; /*모든 div들을 중간의 같은 선상에 정렬*/
-  position: fixed;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  /* position: fixed; */
   width: 100%;
-  padding-top: 20px;
+  padding-top: 10px;
   border-bottom: solid 1px #fff;
   z-index: 9999;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
+  border-bottom: 1px solid black;
+  background-color: var(--all-bg-color);
 }
 .logo {
   display: flex;
@@ -69,7 +62,7 @@ span {
   margin-right: 0px;
 }
 .main_menu li {
-  list-style: none; /*리스트 사용 시 글자 앞에 붙는 표시 제거*/
+  list-style: none;
   padding: 10px 10px;
   border-radius: 5px;
 }
@@ -83,14 +76,15 @@ span {
 .icons li {
   list-style: none;
   padding: 10px 10px;
+  color: black;
 }
 .navbar_toggleBtn {
-  position: absolute; /*문서에서 분리해서 위치 정할 때 사용(하단에 있는 햄버거 메뉴가 로고 부분으로 올라옴)*/
-  right: 50px; /*오른쪽으로 이동할 때 사용*/
-  top: 45px; /*위로 이동할 때 사용*/
+  position: absolute;
+  right: 50px;
+  top: 45px;
   display: none;
 }
-/*반응형으로 만들때는 미디어 쿼리를 사용하기*/
+
 @media screen and (max-width: 768px) {
   .navbar {
     flex-direction: column;
@@ -124,83 +118,204 @@ span {
   }
   .main_menu.active,
   .icons.active {
-    display: flex; /*active 상태면, display:none 상태를 flex박스로 변경하여 보여주고 싶다라는 의미*/
+    display: flex;
+  }
+
+  footer {
+    width: 100%;
   }
 }
 
-/*sidebar*/
-.sidebar {
+button {
+  border: 0px;
   background-color: transparent;
-  position: fixed;
-  left: 90%;
-  z-index: 10;
+  font-size: 1.2em;
+  cursor: pointer;
 }
 
-.sidebar_menu {
-  font-size: 30px;
+.content {
+  width: 100%;
+  height: 600px;
+  display: flex;
+  margin: auto;
+  justify-content: center;
+  padding-top: 5px;
+}
+
+.content__projects p {
+  margin: 10 auto;
   text-align: center;
-  color: blue;
+  cursor: pointer;
 }
 
-/*document_first*/
-video {
+.contents__infos {
+  border-right: 1px solid black;
+  width: 33%;
+  height: 740px;
+}
+
+.contents__infos-title {
+  width: 70%;
+  height: 300px;
+  background-color: #fff;
+  color: var(--point-color);
+  margin: auto;
+  text-align: center;
+  line-height: 300px;
+  font-size: 3em;
+  margin-top: 120px;
+  transition: transform 300ms ease;
+  border-radius: 30px;
+}
+.contents__infos-title:hover {
+  transform: scale(1.1);
+}
+
+.contents__infos-title p {
+  height: 100%;
+}
+
+.content__skills {
+  width: 33%;
+  height: 740px;
+}
+
+.content__skills-em {
   width: 100%;
-  height: auto;
 }
 
-.document_first {
+.content__skills video {
   width: 100%;
-  transform: translateY(-290%);
-  margin: 0 150px;
-  font-size: 15px;
+  height: 400px;
+  text-align: center;
+  margin: 0px;
+  margin-top: 80px;
+  object-fit: fill;
 }
 
-.title {
-  font-size: 50px;
+.content__skills-btn {
+  transform: translateY(-200px);
+  margin-left: 175px;
+  border: 0px;
+  background-color: transparent;
+  font-size: 1.5em;
+  cursor: pointer;
+  color: #fff;
+}
+.content__skills-btn:focus {
+  outline: none;
+  border: 0px;
+}
+.content__skills-btn:hover {
+  color: rgb(0, 0, 0);
 }
 
-/*document_second*/
-.document_second {
+.content__projects {
+  border-left: 1px solid black;
+  width: 33%;
+  height: 740px;
   display: flex;
   flex-direction: column;
-  margin-bottom: 100px;
+  align-items: center;
+  padding-top: 50px;
 }
 
-.uls {
+.content__projects-home-img {
+  width: 220px;
+  cursor: pointer;
+}
+.content__projects-at-img,
+.content__projects-diary-img {
+  width: 200px;
+  cursor: pointer;
+}
+
+.divider {
+  background-color: black;
+  height: 0.1px;
+  width: 80%;
+  margin-bottom: 30px;
+}
+
+/*  */
+.content__present-detail {
+  width: 100%;
+  height: 660px;
+  margin-top: 150px;
+  background-color: #fff;
+  padding: 100px;
+}
+
+.content__present-detail-top {
   display: flex;
-  justify-content: space-between;
-  margin: 0 200px;
+  justify-content: center;
 }
 
-.document_second li {
+.content__present-detail-top ul {
   list-style: none;
-  font-size: 15px;
+  padding-left: 0px;
+  padding: 15px;
+  margin-left: 100px;
 }
 
-.document_second h1 {
-  color: black;
-  text-align: center;
+.bold {
+  font-weight: bold;
+  margin-top: 15px;
+  border-left: 3px black solid;
+  padding-left: 5px;
+}
+
+.content__present-detail-bottom {
+  margin: 100px 150px;
+  display: flex;
+  justify-content: flex-end;
   margin-top: 0px;
-  margin-bottom: 80px;
 }
 
-.document_second h2 {
-  color: black;
+.present-detail-top__ment {
+  font-size: 2.2em;
+}
+
+.present-detail-bottom__call {
+  margin-right: 230px;
+}
+
+/*  */
+.content__skill-detail {
+  margin: 130px 0px;
+}
+
+.skill-detail__title {
+  margin: auto;
   text-align: center;
-  font-size: 20px;
-  margin-bottom: 60px;
-  border-bottom: solid 3px black;
-  padding-bottom: 20px;
-  margin-left: 40px;
+  margin-top: 50px;
+}
+
+.usable_skill {
+  display: flex;
+  padding-left: 100px;
+  padding-top: 50px;
+}
+
+.usable_skill h2 {
+  border-bottom: 2px solid black;
+  height: 50px;
+}
+
+.language {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  margin-left: 60px;
 }
 
 .number {
   display: inline;
-  margin-left: 180px;
+  margin-left: 200px;
 }
 .number2 {
   display: inline;
-  margin-left: 190px;
+  margin-left: 215px;
 }
 .number3 {
   display: inline;
@@ -208,7 +323,12 @@ video {
 }
 .number4 {
   display: inline;
-  margin-left: 180px;
+  margin-left: 130px;
+}
+
+.number5 {
+  display: inline;
+  margin-left: 175px;
 }
 
 .percentage {
@@ -221,43 +341,53 @@ video {
 
 .percentage1,
 .percentage2 {
-  width: 250px;
+  width: 270px;
   height: 16px;
-  background-color: var(--mainFontColor);
+  background-color: var(--point-color);
   border-radius: 50px;
   transform: translateY(-30px);
 }
 .percentage3 {
   width: 200px;
   height: 16px;
-  background-color: var(--mainFontColor);
+  background-color: var(--point-color);
   border-radius: 50px;
   transform: translateY(-30px);
 }
 .percentage4 {
   width: 220px;
   height: 16px;
-  background-color: var(--mainFontColor);
+  background-color: var(--point-color);
   border-radius: 50px;
   transform: translateY(-30px);
 }
 
-.abilitys h2 {
-  margin-bottom: 60px;
+.language-plus,
+.tool {
+  list-style: none;
 }
 
-.pen {
-  background-color: rgba(255, 0, 0, 0.469);
-  width: 300px;
-  height: 30px;
-  text-align: center;
-  margin: auto;
-  transform: translateY(-330%);
+.language-plus li,
+.tool li {
+  padding: 10px;
+}
+
+.abilitys {
+  display: flex;
+  padding-left: 100px;
+  margin-top: 50px;
+}
+
+.abilitys h2 {
+  margin-bottom: 60px;
+  border-bottom: 2px solid black;
+  height: 60px;
 }
 
 .ability {
   display: flex;
   flex-direction: row;
+  list-style: none;
 }
 
 .ability li {
@@ -277,7 +407,9 @@ video {
   padding: 30px;
 }
 
-.abilityImg {
+.abilityImg1,
+.abilityImg2,
+.abilityImg3 {
   width: 150px;
   height: 150px;
 }
@@ -300,193 +432,18 @@ video {
 }
 
 .plus_skill p {
-  font-size: 20px;
+  font-size: 15px;
 }
 
-/*document_third css*/
-.document_third {
-  height: 700px;
-  background-color: rgba(205, 212, 255, 0.347);
-  display: flex;
-  flex-direction: column;
-}
-
-.projects_title {
-  margin: 100px 0px;
-  text-align: center;
-  color: black;
-}
-
-.all_project {
-  display: flex;
-  text-align: center;
-  justify-content: space-around;
-}
-
-.pen1 {
-  position: absolute;
-  background-color: rgba(0, 13, 255, 0.469);
-  width: 300px;
-  height: 30px;
-  left: 550px;
-  margin: auto;
-  transform: translateY(400%);
-}
-
-.project1 {
-  width: 450px;
-  height: 250px;
-  background: url("img/쇼핑몰.PNG") center/cover;
-  border-radius: 5px;
-  /*마우스가 빠졌을 때에도 서서히 변하기 위해 div에도 변형 속성을 줍니다*/
-  /*배경색 변형 선언*/
-  transition-property: background-color;
-  /*변형 완료 1초*/
-  transition-duration: 1s;
-  /*빠른 시작 서서히 감속*/
-  transition-timing-function: ease-out;
-  transition: all 300ms ease-in;
-}
-.project1:hover {
-  width: 450px;
-  height: 250px;
-  transform: scale(1.1);
-  cursor: pointer;
-
-  /*rgb컬러a알파 0~1까지 화이트 0.3만큼 알파 혹은 반투명*/
-  background: url("img/쇼핑몰.PNG") center/cover;
-  /* 변형할 것은 배경 1초, 빠른 시작 서서히 감속*/
-  transition: background 1s ease-out;
-}
-
-.project2 {
-  width: 450px;
-  height: 250px;
-  background: url("img/공모전.JPG") center/cover;
-  border-radius: 5px;
-  /*마우스가 빠졌을 때에도 서서히 변하기 위해 div에도 변형 속성을 줍니다*/
-  /*배경색 변형 선언*/
-  transition-property: background-color;
-  /*변형 완료 1초*/
-  transition-duration: 1s;
-  /*빠른 시작 서서히 감속*/
-  transition-timing-function: ease-out;
-  transition: all 300ms ease-in;
-}
-.project2:hover {
-  width: 450px;
-  height: 250px;
-  transform: scale(1.1);
-  cursor: pointer;
-
-  /*rgb컬러a알파 0~1까지 화이트 0.3만큼 알파 혹은 반투명*/
-  background: url("img/공모전.JPG") center/cover;
-  /* 변형할 것은 배경 1초, 빠른 시작 서서히 감속*/
-  transition: background 1s ease-out;
-}
-
-.project1_wrap,
-.project2_wrap {
-  height: 100%;
-  transform: translateY(-32%);
-}
-
-.project1_wrap:hover,
-.project2_wrap:hover {
-  background-color: rgba(38, 0, 255, 0.803);
-}
-
-.projects_p1 {
-  font-size: 20px;
-  margin: 80px 0px;
-  text-align: center;
-  transform: translateY(70%);
-  color: #fff;
-}
-
-.projects_p2 {
-  font-size: 20px;
-  margin: 80px 0px;
-  text-align: center;
-  transform: translateY(50%);
-  color: #fff;
-}
-
-.plus_project {
-  width: 300px;
+footer {
+  border-top: 1px black solid;
   margin: auto;
   text-align: center;
-  border-bottom: solid 3px blue;
-  border-top: solid 3px blue;
+  font-size: 0.7em;
+  color: lightgray;
   padding: 20px;
+  margin-top: 5px;
 }
 
-/*fotter css*/
-u {
-  margin: 0 5px;
-  color: var(--pointFontColor);
-}
-
-.container {
-  position: absolute;
-  top: 2600px;
-  width: 1600px;
-  background-color: var(--bg-color);
-}
-
-.document_forth {
-  margin: 100px 150px;
-}
-
-.conclusion {
-  margin-bottom: 70px;
-}
-
-.title4 {
-  color: black;
-}
-
-.article4 {
-}
-
-.content4 {
-}
-
-.divider {
-  width: 90%;
-  height: 3px;
-  background-color: black;
-}
-
-.name {
-}
-
-.infos {
-}
-
-.infos_header {
-  color: black;
-  margin-top: 50px;
-}
-
-.infos_name,
-.infos_files,
-.infos_contents {
-}
-
-.name,
-.files,
-.contents {
-}
-
-input,
-textarea {
-}
-
-.footer {
-  width: 100%;
-  height: 50px;
-  background-color: rgba(205, 212, 255, 0.347);
-  text-align: center;
-  padding-top: 40px;
+@media screen and (max-width: 768px) {
 }
